@@ -2129,17 +2129,13 @@ class testMeeting(PloneMeetingTestCase):
         self.changeUser('pmManager')
         meeting = self.create('Meeting', date=DateTime('2015/05/05 12:35'))
         self.portal.portal_languages.setDefaultLanguage('en')
-        translated_meeting_type_name = translate(msgid=meeting.portal_type,
-                                                 domain='plone',
-                                                 context=self.request)
         self.assertEquals(
             meeting.getPrettyLink(showContentIcon=True),
-            u"<a class='pretty_link state-created' title='' "
-            "href='http://nohost/plone/Members/pmManager/mymeetings/{0}/o1' "
-            "target='_self'><span class='pretty_link_icons'><img title='{1}' "
+            u"<a class='pretty_link state-created' title='Meeting of 05 may 2015 (12:35)' "
+            "href='http://nohost/plone/Members/pmManager/mymeetings/plonemeeting-assembly/o1' "
+            "target='_self'><span class='pretty_link_icons'><img title='PloneMeeting assembly' "
             "src='http://nohost/plone/Meeting.png' /></span><span class='pretty_link_content'>"
-            "Meeting of 05 may 2015 (12:35)</span></a>".format(self.meetingConfig.getId(),
-                                                               translated_meeting_type_name))
+            "Meeting of 05 may 2015 (12:35)</span></a>")
 
     def test_pm_ShowMeetingManagerReservedField(self):
         """This condition is protecting some fields that should only be
